# gata

./: .README.md  .codeclimate.yml  .gitignore  .mypy.ini  .pre-commit-config.yaml  .travis.yml  Makefile  README.md  __docs.md  build.py  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml  main.yaml  release.yml
docs/: 1_introduction.md  2_defining_dataclass.md  3_field_types.md  4_validation.md  5_deserialisation.md  6_serialisation.md  7_detailed_schemas.md  build_docs.py
examples/: assertion_example.py  automatic_deserialisation.py  basic_usage.py  custom_serialiser_deserialiser_example.py  custom_type.py  defining_gata_dataclass.py  defining_python_dataclass.py  demo_example.py  introduction_example.py  manual_deserialisation.py  mapping_fields.py  nested_deserialisation.py  nested_mapping_example.py  non_intrusive_example.py  post_init_example.py  schema_example.py  serialising_gata_dataclass.py  serialising_python_dataclass.py  validating_gata_dataclass.py  validating_gata_manual_validation.py  validating_python_dataclass.py
gata/: __init__.py  base_mapping.py  bson_support.py  build_schema.py  dataclass.py  dataclasses.py  doc_string.py  errors.py  field_descriptor.py  format.py  inspect.py  iso_datetime.py  mapping.py  schema.py  serialisable.py  serialise.py  stringformat.py  transform.py  types.py  typing.py  unserialise.py  utils.py  validatable.py  validator.py  validators.py
gata/dataclass/: __init__.py  dataclass.py  deserialise.py  schema.py  serialise.py
gata/errors/: __init__.py  dataclass_error.py  field_error.py  field_validation_error.py  format_error.py  invalid_type_error.py  typemap_error.py  validation_error.py
gata/formatters/: __init__.py  boolean_formatter.py  bytes_formatter.py  date_formatter.py  datetime_formatter.py  default_formatter.py  time_formatter.py
gata/types/: __init__.py  any.py  any_of.py  array.py  boolean.py  date.py  datetime.py  enum.py  integer.py  null.py  number.py  object.py  one_of.py  string.py  type.py
gata/utils/: __init__.py  comparable.py  is_dataclass_type.py  map_type_to_validator.py
gata/validators/: __init__.py  validate.py  validate_all.py  validate_any.py  validate_array.py  validate_base64.py  validate_boolean.py  validate_date.py  validate_datetime.py  validate_email.py  validate_enum.py  validate_falsy.py  validate_format.py  validate_hostname.py  validate_integer.py  validate_ipv4.py  validate_ipv6.py  validate_length.py  validate_multiple_of.py  validate_nullable.py  validate_number.py  validate_range.py  validate_semver.py  validate_string.py  validate_time.py  validate_truthy.py  validate_uri.py  validate_url.py  validate_uuid.py
tests/: fixtures.py  test_dataclass.py  test_field_descriptor.py  test_iso_datetime.py  test_mapping.py  test_schema.py  test_serialisable.py  test_serialise.py  test_transform_object.py  test_types.py  test_typing.py  test_unserialise.py  test_utils.py  test_validatable.py  test_validate.py  test_validator.py
tests/dataclass/: test_dataclass.py  test_deserialise.py  test_schema.py  test_serialise.py
tests/formatters/: test_boolean_formatter.py  test_bytes_formatter.py  test_date_formatter.py  test_datetime_formatter.py  test_time_formatter.py
tests/issues/: test_improved_interface.py  test_issue_15.py  test_issue_8.py  test_issue_custom_init.py  test_issue_enum.py  test_issue_repr_on_frozen_dataclass.py  test_issue_with_none_doc.py  test_missing_error_details.py
tests/types/: test_any.py  test_any_of.py  test_array.py  (+9 more)
(+54 files in other folders)
