[tool.poetry]
name = "gata"
version = "2.6.0"
description = "Gata is data validation and transformation library for python."
authors = [
    "Dawid Kraczkowski <dawid.kraczkowski@gmail.com>"
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/kodemore/gata"
repository = "https://github.com/kodemore/gata"
documentation = "https://github.com/kodemore/gata"

keywords = ["dataclass", "validation", "serialisation", "deserialisation", "schema", "formatter", "loads", "dumps"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
bson = "^0.5.9"

[tool.poetry.dev-dependencies]
black = { version = "^19.3b0", python = "^3.6" }
coverage = "^4.5.4"
mypy = "^0.730.0"
pytest = "^4.1.0"
pytest-cov = "^2.5"
pytest-mock = "^1.9"

[tool.black]
safe = true
