[tool.poetry]
name = "gata"
version = "3.0.0"
description = "Gata is data validation and transformation library for python"
authors = ["dkraczkowski <dawid.kraczkowski@gmail.com>"]
license = "MIT"
packages = [
    {include = "gata"},
    # {include = "tests", format = "sdist"},
]
include = ["gata/py.typed"]
keywords = ["dataclass", "validation", "serialisation", "deserialisation", "schema", "json"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
bson = "^0.5.9"
python = "^3.6"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = { version = "^19.3b0", python = "^3.6" }
coverage = "^4.5.4"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-cov = "^2.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
