[tool.poetry]
name = "gata"
version = "3.3.1"
description = "Gata is data validation and transformation library for python"
authors = ["dkraczkowski <dawid.kraczkowski@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["dataclass", "validation", "serialisation", "deserialisation", "schema", "json"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"

[tool.poetry.dev-dependencies]
black = { version = "^19.3b0", python = "^3.6" }
coverage = "^4.5.4"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"
pytest-cov = "^2.9.0"
codecov = "^2.1.10"
